更新purchase模型并实现更改purchase接口
