# api/store/endpoints.go
@@ -2,6 +2,8 @@ package store
 
 import (
 	"DulceDayServer/api/common"
+	"DulceDayServer/database/models"
+	serviceAuth "DulceDayServer/services/auth"
 	"DulceDayServer/services/store"
 	"github.com/gin-gonic/gin"
 )
@@ -14,15 +16,22 @@ type Endpoints interface {
 
 type EndpointsImpl struct {
 	Endpoints
+	userService       serviceAuth.Service
 	purchasesProvider store.PurchasesProvider
 }
 
-func NewEndpointsImpl(purchasesProvider store.PurchasesProvider) *EndpointsImpl {
-	return &EndpointsImpl{purchasesProvider: purchasesProvider}
+func NewEndpointsImpl(userService serviceAuth.Service, purchasesProvider store.PurchasesProvider) *EndpointsImpl {
+	return &EndpointsImpl{userService: userService, purchasesProvider: purchasesProvider}
 }
 
 func (e EndpointsImpl) MapHandlersToRoutes(router *gin.RouterGroup) *gin.RouterGroup {
 	storeGroup := router.Group("/store")
 	storeGroup.GET("/purchases", e.requestPurchases)
+	storeGroup.PUT(
+		"/purchases",
+		common.MiddleWareAuth(e.userService, common.MiddleWareAuthPolicyReject),
+		common.MiddleWareAuthorityLevel(models.AuthorityLevelRoot),
+		e.putPurchases,
+	)
 	return storeGroup
 }
